# Geometria-Obliczeniowa

./: .gitignore  Helpers.cpp  Helpers.h  Readme.md  structures.cpp  structures.h
gui/: ImGuiExtensions.cpp  ImGuiExtensions.h  gui.cpp  gui.h
lab01/: CMakeLists.txt  main.cpp
lab03/: CMakeLists.txt  main.cpp
lab04/: CMakeLists.txt  main.cpp
lab05/: CMakeLists.txt  main.cpp
lab06/: CMakeLists.txt  main.cpp
lab06/Python/: Contour2Points.py  Image2Outline.py  Points2Mesh.py  sorted_edges.es
lab06/latwy_wariant/: sorted_edges.es
lab06/trudny_wariant/: sorted_edges.es
lab07/: CMakeLists.txt  main.cpp
lab07/Python/: RandomPoints.py
